add nac controllers